# HDS-Capstone

./: .gitignore  capstone codebook (1) (3).html  main.py  pyproject.toml
assets/: adult-codebook_19.json  adult-codebook_20.json  adult-codebook_21.json  adult-codebook_22.json  adult-codebook_23.json
src/: EDA.ipynb  pdf_extractor.py
