[project]
name = "hds-capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.4",
    "notebook>=7.4.3",
    "pandas>=2.3.0",
    "pymupdf>=1.26.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
